--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 terraform/.terraform
+terraform/.terraform.tfstate*
 terraform/credentials.json
 terraform/terraform.tfvars
 terraform/terraform.tfstate*
